--- a/admin/css/editor-components.css
+++ b/admin/css/editor-components.css
@@ -104,7 +104,8 @@
 }
 
 .editor-writing::-webkit-scrollbar {
-  display: none;
+  width: 0;
+  height: 0;
 }
 
 .writing-inner {
